HEAD
	+ Make sure to create the base directory for user homes before create them
	+ Reconnect to LDAP on backup restore
	+ Save configuration files during restore
	+ Catch possible SIGPIPE on LDAP reconnect
2.0.8
	+ Fix Samba PDC on slaves
	+ Check for incompatibility between Samba PDC and PAM on slaves
	+ Optimize slave-sync script if there are no pending operations
	+ Remove useless call to mode() on slave-sync script (faster now)
	+ Replica LDAP listens in all interfaces
2.0.7
	+ Added index add mechanism to LdapModule
	+ Fixed NSS DN config in masters
2.0.6
	+ Added zentyal-rejoin-slave to rejoin a slave to its master
	+ Fixed NSS/PAM in slave machines
2.0.5
	+ Removed wrong hooks implementation
2.0.4
	+ Fixed infinite recursion when setting up some models on slave servers
	+ Added support for addUser/delUser hooks
2.0.3
	+ Allow LDAP users and groups up to 128 characters
	+ Show precondition message for user corner on slave servers
	+ Unconfigure ftp and zarafa in reinstall script
	+ Do not show adsync debug messages if debug is disabled in config
	+ Allow more than one dot in usernames
2.0.2
	+ Fixed master/slave synchronization issues
	+ Remove userjournal dir when removing a slave
	+ Added lock during module enable to avoid initialization problems
	+ Fixed AD slave synchronization task
2.0.1
	+ Fixed incorrect LDAP binding in some cases
2.0
	+ Fixed user journal dir creation on master
	+ Fixed failed login error on user corner
	+ Default login_shell under PAM Settings UI instead of 80users.conf
	+ Replaced /bin/false with /usr/sbin/nologin as default shell
1.5.10
	+ Some refactorizations centered in safer LDAP connections and defensive
	code
1.5.9
	+ More info link added in wizard
1.5.8
	+ Zentyal rebrand
1.5.7
	+ Removed NSS in slave configurations
	+ Nasty bug page replaced by the new eBox error page
1.5.6
	+ Fixed user corner access problems with redis server
1.5.5
	+ LDAP master creation optimized and less error-prone
1.5.4